--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
+    "@prismicio/client": "^7.0.0",
+    "@prismicio/helpers": "^2.3.9",
+    "@prismicio/next": "^1.1.0",
+    "@prismicio/react": "^2.6.1",
     "@types/node": "20.2.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
@@ -21,5 +26,10 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@prismicio/types": "^0.2.7",
+    "@slicemachine/adapter-next": "^0.1.3",
+    "slice-machine-ui": "^1.0.3"
   }
 }
