--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "slicemachine": "start-slicemachine"
   },
   "dependencies": {
+    "@next/font": "^13.4.2",
     "@prismicio/client": "^7.0.0",
     "@prismicio/helpers": "^2.3.9",
     "@prismicio/next": "^1.1.0",
