--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "slicemachine": "start-slicemachine"
   },
   "dependencies": {
-    "@next/font": "^13.4.2",
     "@prismicio/client": "^7.0.0",
     "@prismicio/helpers": "^2.3.9",
     "@prismicio/next": "^1.1.0",
@@ -19,9 +18,10 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "clsx": "^1.2.1",
     "eslint": "8.40.0",
-    "eslint-config-next": "13.4.2",
-    "next": "13.4.2",
+    "eslint-config-next": "13.4.3",
+    "next": "13.4.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
