--- a/slicemachine.config.json
+++ b/slicemachine.config.json
@@ -1,5 +1,6 @@
 {
   "repositoryName": "flowrise",
   "adapter": "@slicemachine/adapter-next",
-  "libraries": ["./slices"]
+  "libraries": ["./slices"],
+  "localSliceSimulatorURL": "http://localhost:3000/slice-simulator"
 }
